@@ -59,55 +59,114 @@ scrollbar-shadow-color:#F0F0EE;
 scrollbar-track-color:#F5F5F5;
 }
 
-/* core.css ez layout styles */
+/* Literal style */
 
-div.block /* Used around groups of objects which are connected in some way, and requires extra margins to the surroundings */
+pre
+{
+  background-color: #ccccff;
+}
+
+/* general custom tag style */
+
+div
+{
+  background-color: #ccffff;
+  border: 1px solid #eeffff;
+}
+
+
+/* Visualisation of default inline custom tags */
+
+div.sub
+{
+  vertical-align: sub;
+  font-size: 0.8em;
+}
+
+div.sup
+{
+  vertical-align: super;
+  font-size: 0.8em;
+}
+
+div.strike
+{
+  text-decoration: line-through;
+}
+
+div.underline
+{
+    text-decoration: underline
+}
+
+/* Visualisation of default block custom tags */
+
+div.pagebreak
+{
+    height: 12px;
+    border: 1px dotted #ccc;
+    margin: 15px 0 15px 0;
+}
+
+div.pagebreak p { margin: 0; }
+
+/* change the style for embed tags */
+
+div.mceNonEditable, div.mceNonEditable div
+{
+  background-color: transparent;
+  border: 0 none;
+}
+
+/* core.css ez layout styles for embed tags */
+
+div.mceNonEditable div.block /* Used around groups of objects which are connected in some way, and requires extra margins to the surroundings */
 {
     margin: 0.5em 0 0.5em 0;
     padding: 0;
     clear: both;
 }
 
-div.block div.element /* Used if several objects are to be stacked horizontally within the same block */
+div.mceNonEditable div.block div.element /* Used if several objects are to be stacked horizontally within the same block */
 {
     padding-right: 1em;
     float: left;
 }
 
-div.block div.left /* Floats elements to the left in a block */
+div.mceNonEditable div.block div.left /* Floats elements to the left in a block */
 {
     width: 48%;
     float: left;
     clear: left;
 }
 
-div.block div.right /* Floats elements to the right in a block */
+div.mceNonEditable div.block div.right /* Floats elements to the right in a block */
 {
     width: 48%;
     float: right;
     clear: right;
 }
 
-div.object-left /* Used for floating images and other content elements to the left inside other content */
+div.mceNonEditable div.object-left /* Used for floating images and other content elements to the left inside other content */
 {
     margin: 0.25em 0.25em 0.25em 0;
     float: left;
     clear: left;
 }
 
-div.object-right /* Used for floating images and other content elements to the right inside other content */
+div.mceNonEditable div.object-right /* Used for floating images and other content elements to the right inside other content */
 {
     margin: 0.25em 0 0.25em 0.25em;
     float: right;
     clear: right;
 }
 
-div.split
+div.mceNonEditable div.split
 {
     clear: both;
 }
 
-div.split:after /* Terminate floating elements flow */
+div.mceNonEditable div.split:after /* Terminate floating elements flow */
 {
     content: "-";
     height: 0;
@@ -117,75 +176,21 @@ div.split:after /* Terminate floating elements flow */
     clear: both;
 }
 
-div.split div.three-left
+div.mceNonEditable div.split div.three-left
 {
     width: 31%;
     float: left;
 }
 
-div.split div.three-right
+div.mceNonEditable div.split div.three-right
 {
     width: 31%;
     float: right;
 }
 
-div.split div.three-center
+div.mceNonEditable div.split div.three-center
 {
     margin: 0 35% 0 35%;
-}
-
-
-/* general custom tag style */
-
-span
-{
-  background-color: #ccffff;
-  border: 1px solid #eeffff;
-}
-
-/* Literal style */
-
-pre
-{
-  background-color: #ccccff;
-}
-
-/* Visualisation of default inline custom tags */
-
-span.sub
-{
-  vertical-align: sub;
-  font-size: 0.8em;
-}
-
-span.sup
-{
-  vertical-align: super;
-  font-size: 0.8em;
-}
-
-span.strike
-{
-  text-decoration: line-through;
-}
-
-span.underline
-{
-    text-decoration: underline
-}
-
-/* Visualisation of default block custom tags */
-
-span.factbox, span.pagebreak, span.quote, span.separator
-{
-    display: block;
-}
-
-span.pagebreak
-{
-    height: 12px;
-    border: 1px dotted #ccc;
-    margin: 15px 0 15px 0;
 }
 
 /* Example of class visualization for paragraph element:
